--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
       {
         "src": "avatar_colab/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "500mb", "runtime": "python3.9" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build_files.sh",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "staticfiles"
+          "distDir": "staticfiles_build"
         }
       }
     ],
