--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "face-api.js": "^0.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -23,7 +24,8 @@
     "react-lazy-load": "^4.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "react-use-face-detection": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
