--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==4.2
+django
 djangorestframework
 django-filter
 djangorestframework-simplejwt
@@ -18,7 +18,6 @@ pyOpenSSL
 rave-python
 python-decouple
 resend
-psycopg2
 django-environ
 dj-rest-auth
 django-allauth
@@ -27,15 +26,12 @@ numpy
 pandas
 scipy
 opencv-python
-# dlib
+
 numpy
 opencv-python
 # dlib-19.24.4.tar.gz
 
 # dlib-19.24.2-cp37-cp37m-linux_armv6l.whl
-
-dlib-binary
-
 build
 simple-background-remover==1.0.1
 psycopg2-binary
@@ -43,6 +39,4 @@ whitenoise
 onnxruntime
 # rembg
 requests
-cmake
 rembg
-dlib-binary
